fixes text alignment

--- a/css/mob-testing.css
+++ b/css/mob-testing.css
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, h5, p, a, li, ul {
+.reveal .slides {
 	text-align: left;
 }
 
@@ -7,6 +7,7 @@ h1, h2, h3, h4, h5, p, a, li, ul {
 }
 
 .footer-right {
+	text-align: center;
 	position: fixed;
     width: 75%;
     left: 50%;
